Today News Updated! 👊

--- a/content/lotd_20160817.md
+++ b/content/lotd_20160817.md
@@ -1,1 +1,6 @@
-LOTD_20160817
+## LOTD_20160817
+
+- http://makeitstranger.com/vamoa-calmarno
+- http://www.theverge.com/2016/8/17/12519804/shadow-brokers-russia-nsa-hack-equation-group
+- https://medium.com/@lloyd/sketch-symbol-best-practices-c957511f1188#.f9vvncmo7
+- http://www.theverge.com/2016/8/17/12519936/intel-usb-type-c-headphone-jack-replacement-idf-2016
