Today News Updated! 👊

--- a/content/lotd_20160817.md
+++ b/content/lotd_20160817.md
@@ -1,6 +1,15 @@
 ## LOTD_20160817
 
-- http://makeitstranger.com/vamoa-calmarno
-- http://www.theverge.com/2016/8/17/12519804/shadow-brokers-russia-nsa-hack-equation-group
-- https://medium.com/@lloyd/sketch-symbol-best-practices-c957511f1188#.f9vvncmo7
-- http://www.theverge.com/2016/8/17/12519936/intel-usb-type-c-headphone-jack-replacement-idf-2016
+- Crea un mensaje con la gran tipografía de Stranger Things [LINK](http://makeitstranger.com/)
+
+- Hacker rusos haciendo de las suyas, cyberguerra pasando hoy mismo [LINK](http://www.theverge.com/2016/8/17/12519804/shadow-brokers-russia-nsa-hack-equation-group)
+
+- Supuestamente al cambiar de circuito análogo a digital podrán fabricarse auriculares más baratos [LINK](http://www.theverge.com/2016/8/17/12519936/intel-usb-type-c-headphone-jack-replacement-idf-2016)
+
+- Es indispensable saberse estos tips de Visual Studio [LINK](http://www.hanselman.com/blog/VisualStudiosMostUsefulAndUnderusedTips.aspx)
+
+- Señal de los tiempos, cisco reduciendo su fuerza laboral en un 7% [LINK](http://arstechnica.com/business/2016/08/cisco-layoffs-rumour-14000-jobs-under-threat/)
+
+- GitHub Pages de forma sencilla [LINK](https://github.com/blog/2228-simpler-github-pages-publishing)
+
+- Oracle chillando y pataleando porque perdieron la demanda contra Google [LINK](http://arstechnica.com/tech-policy/2016/08/at-hearing-oracle-complains-of-tainted-trial-against-google/)
