Today News Updated! 👊

--- a/content/lotd_20160818.md
+++ b/content/lotd_20160818.md
@@ -1,1 +1,16 @@
 ## LOTD_20160818
+- Una buena historia sobre una persona que recién aprendió a programar y su primer empleo [LINK](https://www.reddit.com/r/learnprogramming/comments/4y7e3d/i_began_teaching_myself_to_code_a_year_ago_i_got/)
+
+- Para los que usan parallels hay una nueva versión pero no parece aportar mucho [LINK](http://arstechnica.com/information-technology/2016/08/parallels-for-mac-has-a-new-version-but-not-many-reasons-to-upgrade/)
+
+- WOW un tesla se prende en llamas al parecer algo podría haber golpeado la batería. [LINK](http://arstechnica.co.uk/cars/2016/08/tesla-model-s-france-battery-fire/)
+
+- Como Microsoft debió ganar en el mercado de los smartphones [LINK](http://www.extremetech.com/computing/206519-microsoft-saw-the-future-but-missed-creating-it)
+
+- Una buena de Microsoft, Powershell OpenSource disponible para Mac y Linux 😱 [LINK](http://venturebeat.com/2016/08/18/microsoft-open-sources-powershell-and-extends-it-to-linux/)
+
+- Malditos finlandeses! [LINK](http://spectrum.ieee.org/cars-that-think/transportation/self-driving/helsinki-tries-selfdriving-buses-in-real-traffic)
+
+- Fushia el nuevo SO de Google sigue siendo un misterio pero parece que usará Dart y podría ser un sistema orientado al IoT o a un dispositivo de VR [LINK](http://www.androidauthority.com/we-compiled-fuchsia-os-710491/)
+
+-
