manual update yei... 💤

--- a/content/lotd_20160819.md
+++ b/content/lotd_20160819.md
@@ -1,1 +1,14 @@
 ## LOTD_20160819
+- Estás dos listas son sobre tendencias del futuro: [LINK](https://news.slashdot.org/story/16/08/19/104206/eleven-reasons-to-be-excited-about-the-future-of-technology),  [LINK](http://blogs.wsj.com/cio/2016/08/18/the-top-ten-emerging-technologies-of-2016/).
+
+- Less is more, productive programmer [LINK](https://codewithoutrules.com/2016/08/18/productive-programmer/)
+
+- Los millenias jóvenes son lo peor 😤 [LINK](https://thebillfold.com/millennials-dont-use-credit-cards-because-they-have-no-money-b3b7aebfa370#.s6fq9v4ag) , [LINK](http://www.visualcapitalist.com/chart-most-millennials-less-1000-savings/).
+
+- Microsoft jodiendo millones de webcams con un update [LINK](https://www.thurrott.com/windows/windows-10/76719/microsoft-broken-millions-webcams-windows-10-anniversary-update)
+
+- No más chrome apps, bueno para 2017 no más chrome apps. [LINK](http://arstechnica.com/gadgets/2016/08/google-is-killing-chrome-apps-on-windows-mac-and-linux/)
+
+- NSA? nahh [LINK](http://news.softpedia.com/news/computer-science-professor-gives-failing-grade-to-newly-leaked-nsa-hacking-tool-507482.shtml)
+
+- Lo que realmente necesitamos se está volviendo cada vez más caro mientras las TVs y smartphones más baratos 🤔 [LINK](https://www.washingtonpost.com/news/wonk/wp/2016/08/17/the-stuff-we-really-need-is-getting-more-expensive-other-stuff-is-getting-cheaper/)
