Manual Update again... 💤

--- a/content/lotd_20160820.md
+++ b/content/lotd_20160820.md
@@ -1,1 +1,9 @@
 ## LOTD_20160820
+
+- Visual Studio con la extensión para git rockea, nueva versión [LINK](https://github.com/blog/2232-github-extension-for-visual-studio-2-0-is-now-available)
+- Más tutoriales de programación con ejemplos de pokemon por qué no? [LINK](http://blog.geofenceapi.org/post/149196681132/building-pokemongo-in-pure-html-javascript-css)
+- Construye tu primer plugin para Atom [LINK](https://github.com/blog/2231-building-your-first-atom-plugin)
+- Hay aplicación de paga y webs gratis para aplicar la técnica pomodoro pero, está herramienta de consola sirve muy bien [LINK](https://github.com/guillaumebreton/gone)
+- El Calentamiento Global Rompiendo Records [LINK](https://news.slashdot.org/story/16/08/20/166208/every-month-this-year-has-been-the-hottest-in-recorded-history)
+- Cool Story about Toy Story [LINK](https://www.quora.com/How-much-faster-would-it-be-to-render-Toy-Story-in-2011-compared-to-how-long-it-took-in-1995)
+- 10 Libros para programadores [LINK](http://blog.radiantworkers.com/10-free-programming-books-every-coder-read/)
