Today News Updated! 👊

--- a/content/lotd_20160821.md
+++ b/content/lotd_20160821.md
@@ -1,1 +1,7 @@
 ## LOTD_20160821
+- Muestra el tamaño del repositorio y directorios en Git [LINK](https://github.com/harshjv/github-repo-size)
+- Tips para git en la terminal [LINK](https://github.com/nirajpandkar/git-tip)
+- 10 Libros para programadores [LINK](http://blog.drinkbird.com/books/)
+- Julio 2016 el mes más caluroso del que se tiene registro [LINK](http://eoimages.gsfc.nasa.gov/images/imagerecords/88000/88607/monthlyanoms_gis_201607.gif)
+- Extrae el código de cualquier chrome extension [LINK](http://crxextractor.com/)
+- Cryptic para guardar información de forma encriptada localmente [LINK](https://github.com/domodwyer/cryptic)
