Today News Updated! 👊

--- a/content/lotd_20160821.md
+++ b/content/lotd_20160821.md
@@ -5,3 +5,4 @@
 - Julio 2016 el mes más caluroso del que se tiene registro [LINK](http://eoimages.gsfc.nasa.gov/images/imagerecords/88000/88607/monthlyanoms_gis_201607.gif)
 - Extrae el código de cualquier chrome extension [LINK](http://crxextractor.com/)
 - Cryptic para guardar información de forma encriptada localmente [LINK](https://github.com/domodwyer/cryptic)
+- Una buena plataforma para enseñar a programar [LINK](https://repl.it/)
