Today News Updated! 👊

--- a/content/lotd_20160822.md
+++ b/content/lotd_20160822.md
@@ -1,1 +1,20 @@
 ## LOTD_20160822
+- Una buena lista de recursos y librerías (HTML/CSS/JS) [LINK](https://likethefuture.com/amazingly-useful-html-css-and-javascript-tools-and-libraries/)
+
+- Un buen resumen de los Olímpicos 2016[LINK](http://andybarefoot.com/olympics/dominance.html)
+
+- PS4 photo leak [LINK](http://arstechnica.com/gaming/2016/08/ps4-slim-specs-price-release-date/)
+
+- Aire acondicionado portátil, deme tres! [LINK](https://www.kickstarter.com/projects/1253665084/zero-breeze-the-worlds-coolest-portable-air-condit)
+
+- Android 7.0 Nougat para: [LINK](http://androidandme.com/2016/08/news/android-7-0-nougat-is-now-rolling-out-to-nexus-devices/)
+  - Nexus 6P
+  - Nexus 5X
+  - Nexus 6
+  - Nexus 9
+  - Nexus Player
+  - Pixel C
+  - General Mobile 4G
+- Muy interesante articulo sobre la soledad [LINK](http://nautil.us/blog/loneliness-is-a-warning-sign-to-be-social)
+
+- Las 44 empresas del Demo Day 1 2016 en YC [LINK](https://techcrunch.com/2016/08/22/y-combinator-demo-day-summer-2016/)
