Today News Updated! 👊

--- a/content/lotd_20160823.md
+++ b/content/lotd_20160823.md
@@ -1,1 +1,5 @@
 ## LOTD_20160823
+
+- Rant sobre Tux [LINK](https://piss.io/how-tux-the-penguin-ruined-it-for-linux-8b221fe63387#.2lr3h5jko)
+- Pokemon Go empieza a decaer en usuarios activos. Creo es cuestión de tiempo para que saquen algo nuevo y sea trend de nuevo [LINK](http://arstechnica.com/gaming/2016/08/pokemon-go-sheds-more-than-10m-users/)]
+- Tesla Model S P100D with Ludicrous patea traseros "0-60 mph time of 2.5" [LINK](https://www.tesla.com/blog/new-tesla-model-s-now-quickest-production-car-world)
