Today News Updated! 👊

--- a/content/lotd_20160824.md
+++ b/content/lotd_20160824.md
@@ -8,3 +8,4 @@
 - [LINK](http://gettimeflip.com/)
 - [LINK](http://qz.com/711490/why-japan-has-more-music-stores-than-the-rest-of-the-world/)
 - [LINK](https://techcrunch.com/2016/08/23/yc-demo-day/)
+- Klipse permite incrustar un editor de código en varios lenguajes y que este código sea evaluado en real time 😱 [LINK](https://github.com/viebel/klipse)
