Today News Updated! 👊

--- a/content/lotd_20160824.md
+++ b/content/lotd_20160824.md
@@ -1,11 +1,11 @@
 ## LOTD_20160824
 
-- [LINK](https://pragprog.com/the-pragmatic-programmer/extracts/tips)
-- [LINK](https://www.npmjs.com/package/auto-install)
-- [LINK](https://github.com/surbhioberoi/github-widget)
-- [LINK](http://chrismm.com/blog/how-to-use-your-full-brain-when-writing-code/?)
-- [LINK](https://github.com/guillaumebreton/gone)
-- [LINK](http://gettimeflip.com/)
-- [LINK](http://qz.com/711490/why-japan-has-more-music-stores-than-the-rest-of-the-world/)
-- [LINK](https://techcrunch.com/2016/08/23/yc-demo-day/)
+- Tips sacados del libro "The Pragmatic Programmer" [LINK](https://pragprog.com/the-pragmatic-programmer/extracts/tips)
+- auto-install excelente plugin para atom que instala dependencias en node de forma automática [LINK](https://www.npmjs.com/package/auto-install)
+- Un widget con tu información de github [LINK](https://github.com/surbhioberoi/github-widget)
+- Gone un timer en CLI al estilo pomodoro [LINK](https://github.com/guillaumebreton/gone)
+- Mide tu tiempo con un cubo, muy peculiar [LINK](http://gettimeflip.com/)
 - Klipse permite incrustar un editor de código en varios lenguajes y que este código sea evaluado en real time 😱 [LINK](https://github.com/viebel/klipse)
+- Wifi tres veces más rápido [LINK](http://www.msn.com/en-us/news/technology/mit-scientists-develop-groundbreaking-new-wifi-thats-three-times-faster/ar-BBw0beS?li=BBnbcA1)
+
+Fitness Trackers de McDonal's WTF? [LINK](http://arstechnica.com/science/2016/08/mcdonalds-recalls-happy-meal-fitness-trackers-after-they-injure-kids/)
