Today News Updated! 👊

--- a/content/lotd_20160825.md
+++ b/content/lotd_20160825.md
@@ -1,3 +1,9 @@
 ## LOTD_20160825
 
 - Está lista de libros vale oro **Books recommended on the Tim Ferriss Show** [LINK](http://fourhourbook.club/)
+
+- Windows 10 Anniversary Update está ropiendo todo, primero webcams y ahora resulta que si conectas tu kindle te da un BSOD! [LINK](https://tech.slashdot.org/story/16/08/25/1843259/windows-10-computers-crash-when-amazon-kindles-are-plugged-in)
+
+- Gitlab es genial, hoy hubo un update. Gitlab 8.11.2 [LINK](https://about.gitlab.com/2016/08/25/gitlab-8-dot-11-dot-2-released/)
+
+- iPhone de 2017 va eliminar el boton de home entre otras cosas 😱 [LINK](http://www.macrumors.com/2016/08/25/apple-to-eliminate-home-button-in-2017-iphone/)
