Today News Updated! 👊

--- a/content/lotd_20160829.md
+++ b/content/lotd_20160829.md
@@ -3,3 +3,9 @@
 - 25 de linux, aquí algunos hechos [LINK](https://medium.freecodecamp.com/linux-is-25-yay-lets-celebrate-with-25-rad-facts-about-linux-c8d8ac30076d#.quqv0parn)
 - **Why Tim Berners-Lee is no friend of Facebook**. Muy buen articulo sobre la web como plataforma abierta y el papel que juega facebook en ella.[LINK](https://www.theguardian.com/commentisfree/2016/aug/28/tim-berners-lee-open-web-mark-zuckerberg-facebook)
 - Los lenguajes más hablados en el mundo [LINK](http://matadornetwork.com/life/worlds-spoken-languages-one-simple-infographic/?tse_id=INF_1e6256106d6e11e6aea2d77665e8622b)
+- **New Surface Pro 4 Ad Compares Tablet PC With MacBook Air**. Microsof tirandole a Apple. ternurita ❤️, hay cosas que nunca cambian [LINK](http://www.macrumors.com/2016/08/29/surface-pro-4-ad-compares-macbook-air/)
+- “See you on the 7th”, nuevo iPhone y macOS Sierra 😃🎉 [LINK](http://arstechnica.com/apple/2016/08/see-you-on-the-7th-apple-announces-date-for-new-announcements/)
+- Fork, Un cliente para Git compatible con Mac. Se ve padre si te gusta manejar git con interfaz gráfica. [LINK](https://git-fork.com/)
+- **4 Millennial Men with 4 Very Different Incomes Open Up About the Lives They Can Afford**. La diferencia entre querer tener casas en diferentes países a querer tener un carro para ir al trabajo. Mucho para reflexionar [LINK](http://www.esquire.com/lifestyle/money/news/a48020/four-millennial-men-four-incomes/)
+- Haz un gif con está aplicación web  de forma muy fácil y rápida [LINK](https://www.gifstudio.me)
+- Google Cast por default en chrome (no necesitarás la extensión) [LINK](http://arstechnica.com/gadgets/2016/08/google-cast-gets-built-into-chrome/)
