Today News Updated! 👊

--- a/content/lotd_20160829.md
+++ b/content/lotd_20160829.md
@@ -9,3 +9,4 @@
 - **4 Millennial Men with 4 Very Different Incomes Open Up About the Lives They Can Afford**. La diferencia entre querer tener casas en diferentes países a querer tener un carro para ir al trabajo. Mucho para reflexionar [LINK](http://www.esquire.com/lifestyle/money/news/a48020/four-millennial-men-four-incomes/)
 - Haz un gif con está aplicación web  de forma muy fácil y rápida [LINK](https://www.gifstudio.me)
 - Google Cast por default en chrome (no necesitarás la extensión) [LINK](http://arstechnica.com/gadgets/2016/08/google-cast-gets-built-into-chrome/)
+- Mr. Robot: Digital After Show (necesitas usar VPN) [LINK](https://www.youtube.com/watch?v=o-871VKzBxk)
