Today News Updated! 👊

--- a/content/lotd_20160830.md
+++ b/content/lotd_20160830.md
@@ -1,1 +1,9 @@
 ## LOTD_20160830
+
+- **How I Used & Abused My Tesla.** Los tesla aguantan, no son un carrito de juguete y se pueden usar como airbnb rental 😂 [LINK](https://medium.com/@SteveSasman/how-i-used-abused-my-tesla-what-a-tesla-looks-like-after-100-000-miles-a-48-state-road-trip-6b6ae66b3c10#.q4tv4dey1)
+
+- **FBI Says Foreign Hackers Breached State Election Systems.** hackers, hackers! [LINK](https://politics.slashdot.org/story/16/08/29/1758212/fbi-says-foreign-hackers-breached-state-election-systems)
+
+- **Cuddle Mattress** [LINK](http://www.cuddle-mattress.com/)
+
+- **Google To Take On Uber With New Ride-Share Service** [LINK](https://tech.slashdot.org/story/16/08/30/1939255/google-to-take-on-uber-with-new-ride-share-service)
