--- a/content/lotd_20160831.md
+++ b/content/lotd_20160831.md
@@ -7,3 +7,5 @@
 - **400,000 GitHub repositories, 1 billion files, 14 terabytes of code: Spaces or Tabs?** [LINK](https://medium.com/@hoffa/400-000-github-repositories-1-billion-files-14-terabytes-of-code-spaces-or-tabs-7cfe0b5dd7fd#.e6rcpfmsb)
 
 - Spaces vs Tabs. Ganan los Spaces! excepto en c y go [LINK](https://medium.com/@hoffa/400-000-github-repositories-1-billion-files-14-terabytes-of-code-spaces-or-tabs-7cfe0b5dd7fd#.e6rcpfmsb)
+
+- "No more monkeys driving cars!", la solución al tráfico [LINK (video)](https://www.youtube.com/watch?v=iHzzSao6ypE)
