--- a/content/lotd_20160831.md
+++ b/content/lotd_20160831.md
@@ -2,10 +2,14 @@
 
 - Actualización de atom con algunos fixs para usuarios windows [LINK](http://blog.atom.io/2016/08/31/atom-1-10-and-1-11-beta.html)
 
-- Dropbox fue "Hackeado" en 2012, si tu cuenta data de antes de ese año y usas el mismo password en todos lados, tienes un problema. [LINK](http://arstechnica.com/security/2016/08/dropbox-hackers-stole-email-addresses-hashed-passwords-68m-accounts/)
+- Dropbox fue "Hackeado" en 2012, si tu cuenta data de antes de ese año y usas el mismo password en todos lados, tienes un problema. (60 millones de cuentas btw, HOLY SHIT! 🕌💩) [LINK](http://arstechnica.com/security/2016/08/dropbox-hackers-stole-email-addresses-hashed-passwords-68m-accounts/)
 
 - **400,000 GitHub repositories, 1 billion files, 14 terabytes of code: Spaces or Tabs?** [LINK](https://medium.com/@hoffa/400-000-github-repositories-1-billion-files-14-terabytes-of-code-spaces-or-tabs-7cfe0b5dd7fd#.e6rcpfmsb)
 
 - Spaces vs Tabs. Ganan los Spaces! excepto en c y go [LINK](https://medium.com/@hoffa/400-000-github-repositories-1-billion-files-14-terabytes-of-code-spaces-or-tabs-7cfe0b5dd7fd#.e6rcpfmsb)
 
 - "No more monkeys driving cars!", la solución al tráfico [LINK (video)](https://www.youtube.com/watch?v=iHzzSao6ypE)
+
+- **Samsung Unveils New Gear S3 Smart Watch With GPS and LTE**. Justo cuando se apróxima un evento de Apple 🤔 [LINK](http://www.macrumors.com/2016/08/31/samsung-unveils-gear-s3-smart-watch
+
+-**And it’s gone —The true cost of interruptions**. Nos toma alrededor de 30 minutos volver a concentrarnos en lo que estábamos haciendo después de una interrupción prolongada, ya sea programada o inseperada. Y es peor cuando es una "interrupción programada" es decir una JUNTA. [LINK](https://jaxenter.com/aaaand-gone-true-cost-interruptions-128741.html?platform=hootsuite)
