Today News Updated! 👊

--- a/content/lotd_20160901.md
+++ b/content/lotd_20160901.md
@@ -1,1 +1,17 @@
 ## LOTD_20160901
+
+- Grandes errores de grandes compañías, muy interesante viene nokia, microsoft, xerox etc. [LINK](https://www.quora.com/What-is-the-biggest-mistake-that-a-big-company-has-made?share=1)
+
+- Falcon 9 Explota! [LINK](https://tech.slashdot.org/story/16/09/01/1445246/falcon-9-explodes-on-pad)
+
+- Saben que más explota? El nuevo Galaxy Note 7 [LINK](http://arstechnica.com/gadgets/2016/09/samsung-halts-galaxy-note-7-shipments-after-reports-of-exploding-phones/)
+
+![GALAXY](http://cdn.arstechnica.net/wp-content/uploads/2016/09/08514450754406Note-7-terbakar-China1780x390.jpg)
+
+- Expectativa de vida en el mundo 2014. En México a los 76 [LINK](http://statpedia.com/stat/Average_Life_Expectancy_2014/rkt2S5Mi)
+
+- Stranger Things gif generator is back! [LINK](https://strangergif.com/)
+
+- **Hackers Stole Over 43 Million Last.fm Accounts In 2012 Breach** El 2012 fue un año de robar cuentas al parecer, ayer false dropbox, hoy "last.fm". [LINK](https://it.slashdot.org/story/16/09/01/1546209/hackers-stole-over-43-million-lastfm-accounts-in-2012-breach)
+
+
