Today News Updated! 👊

--- a/content/lotd_20160901.md
+++ b/content/lotd_20160901.md
@@ -12,6 +12,13 @@
 
 - Stranger Things gif generator is back! [LINK](https://strangergif.com/)
 
-- **Hackers Stole Over 43 Million Last.fm Accounts In 2012 Breach** El 2012 fue un año de robar cuentas al parecer, ayer false dropbox, hoy "last.fm". [LINK](https://it.slashdot.org/story/16/09/01/1546209/hackers-stole-over-43-million-lastfm-accounts-in-2012-breach)
+- **Great Developers Don't Need To Be "Passionate"** [LINK](http://blog.qualified.io/great-developers-dont-need-to-be-passionate/)
+- **Hackers Stole Over 43 Million Last.fm Accounts In 2012 Breach** El 2012 fue un año de robar cuentas al parecer, ayer false dropbox, hoy "last.fm". [LINK](https://it.slashdot.org/story/16/09/01/1546209/hackers-stole-over-43-million-lastfm-accounts-in-2012-breach) [LINK]()
+
+- **Microsoft Fixes Windows 10 Anniversary Update Freezing Issues** [LINK](https://tech.slashdot.org/story/16/09/01/1610258/microsoft-fixes-windows-10-anniversary-update-freezing-issues)
+
+- **Great Developers Don't Need To Be "Passionate"** [LINK](http://blog.qualified.io/great-developers-dont-need-to-be-passionate/)
+
+- Adios Nexus, Hola Pixel [LINK](http://arstechnica.com/gadgets/2016/09/2016-nexus-phones-will-reportedly-be-branded-pixel-launching-october-4/)
 
 
