Today News Updated! 👊

--- a/content/lotd_20160902.md
+++ b/content/lotd_20160902.md
@@ -1,1 +1,18 @@
 ## LOTD_20160902
+
+- Project Ara **MUERTO**, ni recordaba su existencia, tanto hablar pa nada [LINK](http://arstechnica.com/gadgets/2016/09/project-ara-googles-modular-smartphone-is-dead/)
+
+- **Confirmed: In an Unprecedented Move, Samsung Recalls All Galaxy Note 7**. OMG [LINK](https://hardware.slashdot.org/story/16/09/01/176249/confirmed-in-an-unprecedented-move-samsung-recalls-all-galaxy-note-7)
+
+- **Millions of stolen Last.fm passwords have been decrypted. These are the top 50**. 
+
+  - 123456
+  - password
+  - lastfm
+  - qwerty
+  - abc123
+  - abcdefg
+  - 12345
+  - 1234
+   [LINK](http://qz.com/772977/millions-of-stolen-last-fm-passwords-have-been-decrypted-these-are-the-top-50/)
+
