Today News Updated! 👊

--- a/content/lotd_20160902.md
+++ b/content/lotd_20160902.md
@@ -16,3 +16,8 @@
   - 1234
    [LINK](http://qz.com/772977/millions-of-stolen-last-fm-passwords-have-been-decrypted-these-are-the-top-50/)
 
+- "per Microsoft's support policy, they made the decision that Windows 10 would be the only Windows OS supported on 7th-gen Intel Core" **Latest Intel, AMD chips will only run Windows 10 ... and Linux, BSD, OS X** [LINK](http://www.theregister.co.uk/2016/09/02/windows_intel_kaby_lake_amd_zen/)
+
+- Más trabajos siendo sustituidos por máquinas [LINK](https://news.slashdot.org/story/16/09/03/0218219/walmart-is-cutting-7000-jobs-due-to-automation)
+
+- Git 2.10! [LINK](https://github.com/blog/2242-git-2-10-has-been-released)
