Today News Updated! 👊

--- a/content/lotd_20160905.md
+++ b/content/lotd_20160905.md
@@ -12,3 +12,6 @@
 
   - “Children should not drink more than one 8-ounce sugar-sweetened drink a week yet they are currently drinking their age in sugary drink servings each and every week,” 226 gramos a la semana
 
+- **A SpaceX Falcon 9 that blew up on the launchpad was carrying $205M satellite.** Uppss.. [LINK](http://arstechnica.com/science/2016/09/spacex-explosion-amos-6-satellite-owner-demands-50-million-dollars/)
+
+- **Brazzers Porn Site's Forum Hacked, Exposes Data Of 800,000 Users** [LINK](https://it.slashdot.org/story/16/09/05/141202/brazzers-porn-sites-forum-hacked-exposes-data-of-800000-users)
