Today News Updated! 👊

--- a/content/lotd_20160905.md
+++ b/content/lotd_20160905.md
@@ -15,3 +15,8 @@
 - **A SpaceX Falcon 9 that blew up on the launchpad was carrying $205M satellite.** Uppss.. [LINK](http://arstechnica.com/science/2016/09/spacex-explosion-amos-6-satellite-owner-demands-50-million-dollars/)
 
 - **Brazzers Porn Site's Forum Hacked, Exposes Data Of 800,000 Users** [LINK](https://it.slashdot.org/story/16/09/05/141202/brazzers-porn-sites-forum-hacked-exposes-data-of-800000-users)
+
+- **President Obama Wants To Prevent a Cyber Weapon 'Arms Race'** [LINK](resident Obama Wants To Prevent a Cyber Weapon 'Arms Race' )
+  - Obama said that the world is "moving into a new era where a number of countries have significant capacities", before noting that the United States has "more capacity than anybody, both offensively and defensively" when it comes to cyber weapons."
+
+- 
