Today News Updated! 👊

--- a/content/lotd_20160905.md
+++ b/content/lotd_20160905.md
@@ -19,4 +19,5 @@
 - **President Obama Wants To Prevent a Cyber Weapon 'Arms Race'** [LINK](resident Obama Wants To Prevent a Cyber Weapon 'Arms Race' )
   - Obama said that the world is "moving into a new era where a number of countries have significant capacities", before noting that the United States has "more capacity than anybody, both offensively and defensively" when it comes to cyber weapons."
 
-- 
+- **22-year-old accused of "insulting religious sensitivities," faces five years behind bars.** [LINK](http://arstechnica.com/tech-policy/2016/09/pokemon-go-church-russian-blogger-sokolovsky-faces-jail-term/)
+
