Today News Updated! 👊

--- a/content/lotd_20160906.md
+++ b/content/lotd_20160906.md
@@ -1,1 +1,7 @@
 ## LOTD_20160906
+
+- **US Investigating Potential Covert Russian Plan To Disrupt November Elections** [LINK](https://politics.slashdot.org/story/16/09/05/2242241/us-investigating-potential-covert-russian-plan-to-disrupt-november-elections)
+
+- **Opinion Millennials are having less sex than any generation in 60 years. Here’s why it matters** [LINK](http://www.latimes.com/opinion/opinion-la/la-ol-millennials-less-sex-20160802-snap-story.html)
+
+- **How to get people who installed a leaked build to stop using that build?**. Psychology [LINK](https://blogs.msdn.microsoft.com/oldnewthing/20160906-00/?p=94255)
