Today News Updated! 👊

--- a/content/lotd_20160906.md
+++ b/content/lotd_20160906.md
@@ -5,3 +5,5 @@
 - **Opinion Millennials are having less sex than any generation in 60 years. Here’s why it matters** [LINK](http://www.latimes.com/opinion/opinion-la/la-ol-millennials-less-sex-20160802-snap-story.html)
 
 - **How to get people who installed a leaked build to stop using that build?**. Psychology [LINK](https://blogs.msdn.microsoft.com/oldnewthing/20160906-00/?p=94255)
+
+- **Microsoft Working On Skype Teams, Its Slack Competitor** [LINK](https://tech.slashdot.org/story/16/09/06/1929240/microsoft-working-on-skype-teams-its-slack-competitor)
