Today News Updated! 👊

--- a/content/lotd_20160906.md
+++ b/content/lotd_20160906.md
@@ -7,3 +7,7 @@
 - **How to get people who installed a leaked build to stop using that build?**. Psychology [LINK](https://blogs.msdn.microsoft.com/oldnewthing/20160906-00/?p=94255)
 
 - **Microsoft Working On Skype Teams, Its Slack Competitor** [LINK](https://tech.slashdot.org/story/16/09/06/1929240/microsoft-working-on-skype-teams-its-slack-competitor)
+
+- Chat hecho en excel con VBA 😂 [LINK](http://tristancalderbank.com/2016/09/06/excel-messenger-a-terrible-experiment-in-vba/)
+
+- 
