Today News Updated! 👊

--- a/content/lotd_20160908.md
+++ b/content/lotd_20160908.md
@@ -13,3 +13,5 @@
 - Chrome plans to start highlighting Not Secure websites. It will flag HTTP website as non secure. [LINK](https://medium.servertastic.com/chrome-plans-to-start-highlighting-not-secure-websites-2babf35b46e6#.vl7843njt)
 
 - VS Code tratando de hacerse un "huequito". Version 1.5 [LINK](https://code.visualstudio.com/updates?)
+
+- Apple plug 😂 [LINK](http://appleplugs.com/)
