Today News Updated! 👊

--- a/content/lotd_20160908.md
+++ b/content/lotd_20160908.md
@@ -15,3 +15,5 @@
 - VS Code tratando de hacerse un "huequito". Version 1.5 [LINK](https://code.visualstudio.com/updates?)
 
 - Apple plug 😂 [LINK](http://appleplugs.com/)
+
+- Obama on Climate Change: The Trends Are ‘Terrifying’ [LINK](http://www.nytimes.com/2016/09/08/us/politics/obama-climate-change.html)
