Today News Updated! 👊

--- a/content/lotd_20160909.md
+++ b/content/lotd_20160909.md
@@ -1,3 +1,15 @@
 ## LOTD_20160909
 
-- 
+- **THIS USB THUMB DRIVE WILL FRY YOUR UNSECURED COMPUTER**
+“Almost all consumer-level hardware fails when tested against the USB Kill,” the company states; the only exception so far appears to be “latest version of Apple’s MacBook, which has surge-protected USB ports. [LINK](http://www.totalitech.com/2016/09/08/usb-thumb-drive-will-fry-unsecured-computer/)
+
+- **Mark Zuckerberg accused of abusing power after Facebook deletes 'napalm girl' post** [LINK](https://www.theguardian.com/technology/2016/sep/08/facebook-mark-zuckerberg-napalm-girl-photo-vietnam-war)
+
+- **North Korea Conducts Fifth Nuclear Test -- The Largest One Yet** [LINK](https://yro.slashdot.org/story/16/09/09/0623243/north-korea-conducts-fifth-nuclear-test----the-largest-one-yet)
+
+- **Tiny set of CSS3 animations meant for your radio inputs.** [LINK](https://720kb.github.io/radiobox.css/)
+
+- **People from Mexico show stunning amount of genetic diversity** [LINK](http://www.sciencemag.org/news/2014/06/people-mexico-show-stunning-amount-genetic-diversity)
+	- Imagine if people from Kansas and California were as genetically distinct from each other as someone from Germany is from someone from Japan. That’s the kind of remarkable genetic variation that scientists have now found within Mexico, thanks to the first fine-scale study of human genetic variation in that country.
+
+ 	- “What we demonstrated is that depending upon the type of Native American ancestry you have, it can dramatically influence the diagnosis of lung disease, in a good or a bad way,”
