Today News Updated! 👊

--- a/content/lotd_20160912.md
+++ b/content/lotd_20160912.md
@@ -1,3 +1,13 @@
 ## LOTD_20160912
 
 - **Samsung Will Replace Current Note7 with New One** [LINK](https://news.samsung.com/global/statement-on-galaxy-note7)
+
+- **Best of UX 2016: Designers to Follow on Medium** [LINK](https://uxdesign.cc/the-best-ux-design-authors-to-follow-on-medium-1f791807b08a#.47t58c3gz)
+
+- BeatBoxer in 100 lines of html/css [LINK](http://sig.gy/beatboxer/)
+
+- **North Korea defied world with nuclear test. Now it seeks aid for flood disaster.** [LINK](https://www.washingtonpost.com/world/asia_pacific/north-korea-defied-world-with-nuclear-test-now-it-seeks-aid-for-flood-disaster/2016/09/12/3e710483-476f-4f04-aae4-52af58064e91_story.html?tid=pm_pop_b)
+
+- **Samsung may remotely kill all unreturned Galaxy Note 7’s** [LINK](http://thenextweb.com/gadgets/2016/09/12/remotely-kill-galaxy-note-7/#)
+
+- **Samsung Galaxy Note 7 explodes in New York, burns six-year-old boy** [LINK](http://arstechnica.com/gadgets/2016/09/samsung-galaxy-note-7-explodes-boy/)
