Today News Updated! 👊

--- a/content/lotd_20160913.md
+++ b/content/lotd_20160913.md
@@ -1,1 +1,15 @@
 ## LOTD_20160913
+
+- Earth Temperature Timeline **xkcd** [LINK](http://xkcd.com/1732/)
+
+- **Elon Musk Says Tesla New Autopilot Features Would Have Prevented Recent Death** [LINK](https://tech.slashdot.org/story/16/09/12/1347217/elon-musk-says-tesla-new-autopilot-features-would-have-prevented-recent-death)
+
+- **Jeff Bezos is not screwing around with his plans to colonize space** [LINK](http://arstechnica.com/science/2016/09/blue-origin-unveils-plans-to-fly-a-monster-rocket-by-decades-end/)
+
+- **Millennials Don't Care About Owning Cars, And Car Makers Can't Figure Out Why** [LINK](https://www.fastcoexist.com/3027876/millennials-dont-care-about-owning-cars-and-car-makers-cant-figure-out-why)
+
+- **MacOS turns off the fans when Siri is listening** [LINK](https://news.ycombinator.com/item?id=12488429)
+
+- **YouTube Community** [LINK](https://www.producthunt.com/tech/youtube-community?utm_source=browser_notification&utm_medium=browser_notification&utm_campaign=youtube-community)
+
+- **Sugar industry bought off scientists, skewed dietary guidelines for decades** [LINK](http://arstechnica.com/science/2016/09/sugar-industry-bought-off-scientists-skewed-dietary-guidelines-for-decades/)
