Today News Updated! 👊

--- a/content/lotd_20160913.md
+++ b/content/lotd_20160913.md
@@ -13,3 +13,5 @@
 - **YouTube Community** [LINK](https://www.producthunt.com/tech/youtube-community?utm_source=browser_notification&utm_medium=browser_notification&utm_campaign=youtube-community)
 
 - **Sugar industry bought off scientists, skewed dietary guidelines for decades** [LINK](http://arstechnica.com/science/2016/09/sugar-industry-bought-off-scientists-skewed-dietary-guidelines-for-decades/)
+
+- **Apple's iOS 10 update is causing major problems for some users** [LINK](http://www.theverge.com/2016/9/13/12904582/apple-ios-10-iphone-update-fail)
