Today News Updated! 👊

--- a/content/lotd_20160913.md
+++ b/content/lotd_20160913.md
@@ -15,3 +15,5 @@
 - **Sugar industry bought off scientists, skewed dietary guidelines for decades** [LINK](http://arstechnica.com/science/2016/09/sugar-industry-bought-off-scientists-skewed-dietary-guidelines-for-decades/)
 
 - **Apple's iOS 10 update is causing major problems for some users** [LINK](http://www.theverge.com/2016/9/13/12904582/apple-ios-10-iphone-update-fail)
+
+- GitLab crecé. **GitLab secures $20 million Series B.** Si no usan GitLab hoy es el momento. 🤓 [LINK](https://techcrunch.com/2016/09/13/gitlab-secures-20-million-series-b/)
