Today News Updated! 👊

--- a/content/lotd_20160913.md
+++ b/content/lotd_20160913.md
@@ -17,3 +17,9 @@
 - **Apple's iOS 10 update is causing major problems for some users** [LINK](http://www.theverge.com/2016/9/13/12904582/apple-ios-10-iphone-update-fail)
 
 - GitLab crecé. **GitLab secures $20 million Series B.** Si no usan GitLab hoy es el momento. 🤓 [LINK](https://techcrunch.com/2016/09/13/gitlab-secures-20-million-series-b/)
+
+- **Samsung To Push Software Upgrade Which Will Cap Galaxy Note 7 Battery Charging at 60 Percent** [LINK](https://hardware.slashdot.org/story/16/09/13/2019234/samsung-to-push-software-upgrade-which-will-cap-galaxy-note-7-battery-charging-at-60-percent)
+
+- **ClixSense Suffers Massive Data Breach, 6.6 Million Users Compromised** [LINK](https://yro.slashdot.org/story/16/09/13/2037245/clixsense-suffers-massive-data-breach-66-million-users-compromised)
+
+- **How Do People in Different Countries Spend Their Money?** [LINK](http://www.visualcapitalist.com/how-do-people-in-different-countries-spend-their-money/)
