Today News Updated! 👊

--- a/content/lotd_20160913.md
+++ b/content/lotd_20160913.md
@@ -23,3 +23,5 @@
 - **ClixSense Suffers Massive Data Breach, 6.6 Million Users Compromised** [LINK](https://yro.slashdot.org/story/16/09/13/2037245/clixsense-suffers-massive-data-breach-66-million-users-compromised)
 
 - **How Do People in Different Countries Spend Their Money?** [LINK](http://www.visualcapitalist.com/how-do-people-in-different-countries-spend-their-money/)
+
+- **Edward Snowden Makes 'Moral' Case For Presidential Pardon** [LINK](https://politics.slashdot.org/story/16/09/13/2219236/edward-snowden-makes-moral-case-for-presidential-pardon)
