Today News Updated! 👊

--- a/content/lotd_20160914.md
+++ b/content/lotd_20160914.md
@@ -1,1 +1,11 @@
 ## LOTD_20160914
+
+- Una buena discusión en HackerNews **Facebook technically kills the Internet** [LINK](https://news.ycombinator.com/item?id=12494411)
+
+- **Map of World Billionaires by Country and Origin** Curioso que en Japón son no hay un porcentaje significativo de políticos Billonarios. [LINK](http://ei.marketwatch.com//Multimedia/2016/09/13/Photos/NS/MW-EV816_worldm_20160913114603_NS.jpg?uuid=2d55f476-79c9-11e6-8c93-00137241c023)
+
+- **Why are Adults so busy?** [LINK](http://debarghyadas.com/writes/why-are-adults-so-busy/)
+
+- **The Deadliest Animal in the World** [LINK](https://www.gatesnotes.com/Health/Most-Lethal-Animal-Mosquito-Week)
+
+- **Samsung ya encontró al culpable de los problemas con el Note 7** [LINK](http://www.elfinanciero.com.mx/tech/samsung-ya-encontro-al-culpable-de-los-problemas-con-el-note.html)
