Today News Updated! 👊

--- a/content/lotd_20160914.md
+++ b/content/lotd_20160914.md
@@ -9,3 +9,7 @@
 - **The Deadliest Animal in the World** [LINK](https://www.gatesnotes.com/Health/Most-Lethal-Animal-Mosquito-Week)
 
 - **Samsung ya encontró al culpable de los problemas con el Note 7** [LINK](http://www.elfinanciero.com.mx/tech/samsung-ya-encontro-al-culpable-de-los-problemas-con-el-note.html)
+
+- **A whole new GitHub Universe: announcing new tools, forums, and features** [LINK](https://github.com/blog/2256-a-whole-new-github-universe-announcing-new-tools-forums-and-features)
+
+- **Angular 2.0.0** [LINK](https://github.com/angular/angular/releases/tag/2.0.0)
