Today News Updated! 👊

--- a/content/lotd_20160915.md
+++ b/content/lotd_20160915.md
@@ -1,1 +1,22 @@
 ## LOTD_20160915
+
+- Un nuevo y mejor Slack hecho con electron (BETA) [LINK](https://slack.com/beta/osx)
+
+- **The state of the Octoverse 2016** [LINK](https://octoverse.github.com/#frontpage)
+
+- **The world’s first caffeinated toothpaste** [LINK](https://www.powertoothpaste.com/)
+
+- **Samsung Stops Airing Galaxy Note 7 Commercials, Preps Early Launch of Galaxy S8** [LINK](https://news.slashdot.org/story/16/09/15/0117258/samsung-stops-airing-galaxy-note-7-commercials-preps-early-launch-of-galaxy-s8)
+
+- **Microsoft just edged out Facebook and proved that it's changed in an important way** [LINK](http://www.businessinsider.com/microsoft-github-open-source-2016-9)
+
+- **FBI Director James Comey: Cover Up Your Webcam** [LINK](https://yro.slashdot.org/story/16/09/15/0525229/fbi-director-james-comey-cover-up-your-webcam)
+
+- **Scientists reveal most accurate depiction of a dinosaur ever created** [LINK](https://www.theguardian.com/science/2016/sep/14/scientists-reveal-most-accurate-depiction-of-a-dinosaur-ever-created)
+![dinosaur](https://i.guim.co.uk/img/media/12e889363d4f1e8cb7111c78957d034430dcfe48/0_11_2953_1773/master/2953.jpg?w=620&q=55&auto=format&usm=12&fit=max&s=03f7f2ae8fdf367ceae789f48ef002ba)
+
+- Stop it! **Apple Explores the Idea Of Killing Headphone Jack On the MacBook Pro** [LINK](https://itunes.apple.com/us/app/stephen-hawkings-pocket-universe/id1111504185?mt=8&)
+
+- **Chrome may have improved, but Edge still lasts longer according to Microsoft** [LINK](http://arstechnica.com/information-technology/2016/09/chrome-may-have-improved-but-edge-still-lasts-longer-according-to-microsoft/)
+
+- **This interview with Elon Musk is from Y Combinator's How to Build the Future series** [LINK](http://www.ycombinator.com/future/elon/)
