Today News Updated! 👊

--- a/content/lotd_20160915.md
+++ b/content/lotd_20160915.md
@@ -20,3 +20,15 @@
 - **Chrome may have improved, but Edge still lasts longer according to Microsoft** [LINK](http://arstechnica.com/information-technology/2016/09/chrome-may-have-improved-but-edge-still-lasts-longer-according-to-microsoft/)
 
 - **This interview with Elon Musk is from Y Combinator's How to Build the Future series** [LINK](http://www.ycombinator.com/future/elon/)
+
+- **A Woman Is Suing Her Parents For Posting Embarrassing Childhood Photos To Facebook** [LINK](https://yro.slashdot.org/story/16/09/15/1857221/a-woman-is-suing-her-parents-for-posting-embarrassing-childhood-photos-to-facebook)
+
+- **iOS 10 Is Surfacing Hardcore Porn GIFs in iMessage** [LINK](https://apple.slashdot.org/story/16/09/15/1821207/ios-10-is-surfacing-hardcore-porn-gifs-in-imessage)
+
+- **House Intelligence Committee Letter to Obama on Snowden**[LINK](http://intelligence.house.gov/uploadedfiles/hpsci_members_letter_to_potus_re_snowden-15_sep_16.pdf)
+
+- **Feds: Explosive Samsung Galaxy Note 7 earns official CPSC recall status** [LINK](http://arstechnica.com/gadgets/2016/09/feds-explosive-samsung-galaxy-note-7-earns-official-cpsc-recall-status/)
+
+- **St. Pete family says Jeep totaled by exploding Note 7** [LINK](http://www.fox13news.com/news/local-news/203295058-story)
+
+- **Xiaomi Can Silently Install Any App On Your Android Phone Using A Backdoor** [LINK](https://news.slashdot.org/story/16/09/15/1923220/xiaomi-can-silently-install-any-app-on-your-android-phone-using-a-backdoor)
