Today News Updated! 👊

--- a/content/lotd_20160915.md
+++ b/content/lotd_20160915.md
@@ -32,3 +32,5 @@
 - **St. Pete family says Jeep totaled by exploding Note 7** [LINK](http://www.fox13news.com/news/local-news/203295058-story)
 
 - **Xiaomi Can Silently Install Any App On Your Android Phone Using A Backdoor** [LINK](https://news.slashdot.org/story/16/09/15/1923220/xiaomi-can-silently-install-any-app-on-your-android-phone-using-a-backdoor)
+
+- **Microsoft Has More Open Source Contributors On GitHub Than Facebook and Google** [LINK](https://news.slashdot.org/story/16/09/15/2255241/microsoft-has-more-open-source-contributors-on-github-than-facebook-and-google)
