Today News Updated! 👊

--- a/content/lotd_20160920.md
+++ b/content/lotd_20160920.md
@@ -1,1 +1,7 @@
 ## LOTD_20160920
+
+- **Google confirms October 4 event—prepare for Pixel phones** [LINK](Google confirms October 4 event—prepare for Pixel phones)
+
+- **Fretello - Amplify your guitar skills** [LINK](http://www.fretello.com/)
+
+- **Sketch 40** [LINK](https://www.sketchapp.com/support/updates/sketch-40/?)
