Today News Updated! 👊

--- a/content/lotd_20160920.md
+++ b/content/lotd_20160920.md
@@ -5,3 +5,14 @@
 - **Fretello - Amplify your guitar skills** [LINK](http://www.fretello.com/)
 
 - **Sketch 40** [LINK](https://www.sketchapp.com/support/updates/sketch-40/?)
+
+- **Teenagers will eat veggies—if you tell them they’re sticking it to the man** [LINK](Teenagers will eat veggies—if you tell them they’re sticking it to the man)
+
+- **China Confirms Its Space Station Is Falling Back to Earth** Medidas 10 X 3.5 metros aprox. [LINK](https://science.slashdot.org/story/16/09/20/1451207/china-confirms-its-space-station-is-falling-back-to-earth)
+
+- **macOS 10.12 Sierra: The Ars Technica review** [LINK](http://arstechnica.com/apple/2016/09/macos-10-12-sierra-the-ars-technica-review/)
+
+- **North Korea Has Just 28 Websites** [LINK](https://news.slashdot.org/story/16/09/20/1940224/north-korea-has-just-28-websites)
+
+- **Hillary Clinton IT Guru Posted Server’s Security Keys to Public, Opening Door for Hackers to Access Emails** [LINK](http://truepundit.com/hillary-clinton-it-guru-posted-servers-security-keys-on-public-forum-opening-door-for-hackers-to-access-emails/)
+
